   provides same functionality as Go4 sockets connection and besides shows remote terminal output in the analysis window.
   Access to web server (controller/observer roles) can be controlled by htdigest accounts and password
4. GUI can start go4analysis as HTTP server with Launch Analysis button. 
   This provides  now an alternative mode to the established Go4 sockets analysis server. 


Changes in Go4 v4.7.1
1. Implement TGo4Parameter::UpdateFromUrl() method to be able change
   parameter values via HTTP server.
2. Provide several shortcuts in web interface for commands like:
   "Start", "Stop", "Clear", "Resubmit"
3. In batch mode do not account events in non-running mode, reduce
   cpu load with sleep in non-running mode. 
4. Introduce go4.js with go4-related JavaScript code
5. Provide html-based condition and parameter editors
6. Support access to ROOT-based http server from go4 GUI. 
   Just when staring go4, specify:
      [shell]  go4 http://localhost:8080
7. Added new condition type TGo4ShapedCond. This is subclass of TGo4Polycond with properties
   to create ellipse/circle/box-shaped polygon region from center/radius/tilt parameters. Supported by
   new registration methods MakeEllipseCond, MakeCircleCond, MakeBoxCond in TGo4Analysis and TGo4EventProcessor.
   Condition editor in qt4 GUI has a tab to manipulate these conditions interactively.
   Thanks to Sven Augustin, MPI Heidelberg, for this idea.        
8. When file opened in Go4, sub-directory will be read only after
   actively clicked. Allow read large ROOT files.  
    

Changes in Go4 v4.7.0
1. Store main window geometry and toolboxes settings in hotstart (only qt4).
   Makes possible to reproduce exactely view of the main panel. 
2. In go4-config script provide --cflags, --libs and --glibs option.
   This should allow to build libraries and executables, which are using
   go4 libraries.    
3. When taking ROOT objects from DABC-based application, also request and